--- a/config/config.env
+++ b/config/config.env
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=5000
 
-MONGO_URI=
+MONGO_URI=mongodb+srv://admin:t0qYRC9GoHtFk1Nh@cluster0.dfvnx.mongodb.net/bookOfLife?retryWrites=true&w=majority
 
 FILE_UPLOAD_PATH= ./public/uploads
 MAX_FILE_UPLOAD=1000000
