Added some functionality

--- a/config/config.env
+++ b/config/config.env
@@ -12,7 +12,7 @@ JWT_COOKIE_EXPIRE=30
 
 SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
-SMTP_EMAIL=
-SMTP_PASSWORD=
-FROM_EMAIL=
-FROM_NAME=
+SMTP_EMAIL=6ecf34d09afdb4
+SMTP_PASSWORD=6016f776c3f541
+FROM_EMAIL=noreply@bookoflife.com
+FROM_NAME=BookOfLife
