--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express-fileupload": "^1.1.6-alpha.5",
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.0.0",
+    "generate-password": "^1.7.0",
+    "handlebars": "^4.7.7",
     "helmet": "^3.21.1",
     "hpp": "^0.2.2",
     "jsonwebtoken": "^8.5.1",
